@@ -2,6 +2,10 @@
 Changes with Apache 2.3.0
 [ When backported to 2.2.x, remove entry from this file ]
 
+  *) Be tolerant in what you accept - accept slightly broken
+     status lines from a backend provide they include a valid status code.
+     PR 44995 [Rainer Jung <rainer.jung kippdata.de>
+
   *) New module mod_sed: filter Request/Response bodies through sed
      [Basant Kumar Kukreja <basant.kukreja sun.com>]
 
